@@ -1,13 +1,9 @@
 package teams.api;
 
+import io.restassured.http.ContentType;
 import org.junit.Test;
 import teams.AbstractApplicationTest;
-import teams.domain.Language;
-import teams.domain.Membership;
-import teams.domain.NewTeamProperties;
-import teams.domain.Role;
-import teams.domain.Team;
-import teams.domain.TeamProperties;
+import teams.domain.*;
 import teams.exception.DuplicateTeamNameException;
 import teams.exception.IllegalMembershipException;
 import teams.exception.IllegalSearchParamException;
@@ -18,19 +14,9 @@ import java.util.Map;
 import java.util.Set;
 
 import static io.restassured.RestAssured.given;
-import static org.apache.http.HttpStatus.SC_BAD_REQUEST;
-import static org.apache.http.HttpStatus.SC_FORBIDDEN;
-import static org.apache.http.HttpStatus.SC_INTERNAL_SERVER_ERROR;
-import static org.apache.http.HttpStatus.SC_NOT_FOUND;
-import static org.apache.http.HttpStatus.SC_OK;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.isEmptyOrNullString;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.apache.http.HttpStatus.*;
+import static org.hamcrest.Matchers.*;
+import static org.junit.Assert.*;
 import static org.springframework.http.HttpHeaders.CONTENT_TYPE;
 
 public class TeamControllerTest extends AbstractApplicationTest {
@@ -86,7 +72,7 @@ public class TeamControllerTest extends AbstractApplicationTest {
                 .get("api/teams/teams/{id}", 6L)
                 .then()
                 .statusCode(SC_BAD_REQUEST)
-                .body("message", isEmptyOrNullString());
+                .body("message", is(emptyOrNullString()));
     }
 
     @Test
@@ -107,8 +93,8 @@ public class TeamControllerTest extends AbstractApplicationTest {
                 .then()
                 .statusCode(SC_OK)
                 .body("description", equalTo("we are riders"))
-                .body("memberships", isEmptyOrNullString())
-                .body("role", isEmptyOrNullString())
+                .body("memberships", is(emptyOrNullString()))
+                .body("role", is(emptyOrNullString()))
                 .body("admins.name", hasItems("John Doe"))
                 .body("admins.email", hasItems("john.doe@example.org"));
     }
@@ -243,13 +229,13 @@ public class TeamControllerTest extends AbstractApplicationTest {
     public void createTeamAsGuest() throws Exception {
         given()
                 .body(new Team("urn", "valid", null, true, null))
-                .header(CONTENT_TYPE, "application/json")
+                .contentType(ContentType.JSON)
+                .accept(ContentType.JSON)
                 .header("is-member-of", "guest-org")
                 .when()
                 .post("api/teams/teams")
                 .then()
-                .statusCode(SC_FORBIDDEN)
-                .body("message", nullValue());
+                .statusCode(SC_FORBIDDEN);
     }
 
     @Test
@@ -284,7 +270,7 @@ public class TeamControllerTest extends AbstractApplicationTest {
 
         Team updatedTeam = teamRepository.findByUrn("demo:openconext:org:riders").get();
 
-        assertEquals(new Long(1), updatedTeam.getId());
+        assertEquals(Long.valueOf(1L), updatedTeam.getId());
         assertFalse(updatedTeam.getPublicLink().startsWith("wZ"));
     }
 
